--- a/index.html
+++ b/index.html
@@ -31,32 +31,6 @@
         <div class="loader">
             <div class="inner"></div>
         </div>
-
-        <div id="slides">
-
-            <div class="overlay"></div>
-
-            <div class="slides-container">
-                <img src="images/slide1.jpg" alt="Image of coding desk">
-                <img src="images/slide2.jpg" alt="Image of coding materials">
-                <img src="images/slide3.jpg" alt="image of girl coding">
-            </div>
-
-            <div class="titleMessage">
-                <div class="heading">
-                    <p class="name">Moonen Nikita</p>
-                    <p class="sub typed"></p>
-                </div>
-            </div>
-
-
-            <nav class="slides-navigation">
-                <a href="#" class="next"></a>
-                <a href="#" class="prev"></a>
-            </nav>
-
-        </div>
-
         <nav id="navigation" class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#">Moonen Nikita</a>
 
@@ -87,6 +61,30 @@
             </div>
         </nav>
 
+        <div id="slides">
+
+            <div class="overlay"></div>
+
+            <div class="slides-container">
+                <img src="images/slide1.jpg" alt="Image of coding desk">
+                <img src="images/slide2.jpg" alt="Image of coding materials">
+                <img src="images/slide3.jpg" alt="image of girl coding">
+            </div>
+
+            <div class="titleMessage">
+                <div class="heading">
+                    <p class="name">Moonen Nikita</p>
+                    <p class="sub typed"></p>
+                </div>
+            </div>
+
+
+            <nav class="slides-navigation">
+                <a href="#" class="next"></a>
+                <a href="#" class="prev"></a>
+            </nav>
+
+        </div>
 
         <div id="about" class="section">
             <div class="container">
@@ -103,7 +101,7 @@
                             experience, but i would like to get an opportunity to show you what i CAN do. </p>
                         <p>I started learning programming on my own, i made a few localHost projects that i saw on the
                             internet.
-                            This is my first live page on the internet. Now i feel convident enough to get a hands on
+                            This is my first live page on the internet. Now i feel confident enough to get a hands on
                             web developer job.</p>
                         <!-- <button class="resumeButton"><a href="cv.html" class="cv">curriculum vitae</a></button> -->
 
