--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Moonen Nikita</title>
+
+        <link href="https://fonts.googleapis.com/css?family=Bitter|Playfair+Display:400,900,900i&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles/stylesCv.css">
     </head>
 
     <body>
@@ -21,7 +27,7 @@
             </ul>
         </div>
 
-        <div class="informatie">
+        <div class="informatie section">
             <h4>INFORMATIE</h4>
             <table class="info">
                 <tr>
@@ -47,7 +53,7 @@
             </table>
         </div>
 
-        <div>
+        <div class="werkErvaring section">
             <h4>WERK ERVARING</h4>
             <table>
                 <tr>
@@ -80,7 +86,7 @@
             </table>
         </div>
 
-        <div class="talen">
+        <div class="talen section">
             <h4 class="talenTitle">TALEN</h4>
             <table class="talen">
                 <tr>
@@ -93,11 +99,11 @@
                 </tr>
                 <tr>
                     <th>Frans</th>
-                    <td>matig</td>
+                    <td>basis</td>
                 </tr>
             </table>
         </div>
-        <div>
+        <div class="opleiding section">
             <h4>OPLEIDING</h4>
             <table>
                 <tr>
@@ -119,12 +125,20 @@
 
             </table>
         </div>
-        <div>
+        <div class="vaardigheden section">
             <h4>VAARDIGHEDEN</h4>
             <ul>
-                <li>Microsoft Office</li>
-                <li></li>
+                <li>Teamplayer</li>
+                <li>leergierig</li>
+                <li>flexibel</li>
+                <li>enthousiast</li>
             </ul>
+        </div>
+
+        <div class="copyrightSection">
+            <div class="col-md-12 text-center">
+                <p>&copy; Copyright by Moonen Nikita 2019</p>
+            </div>
         </div>
 
     </body>
