cv.html images/meCv.jpg styles/stylesCv.css git commit [cv.html]

--- a/cv.html
+++ b/cv.html
@@ -15,127 +15,168 @@
     </head>
 
     <body>
-        <h1>MOONEN NIKITA</h1>
-        <h2>curriculum vitae</h2>
 
-        <div>
+        <div class="heading">
+            <img class="imageCv" src="images/meCv.jpg" alt="image of nikita" align="left">
+            <h1>MOONEN NIKITA</h1>
+            <h3>curriculum vitae</h3>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="info section">
+                        <h4>PERSONAL INFO</h4>
+                        <table class="info">
+                            <tr>
+                                <th>Adress</th>
+                                <td>Torhoutbaan 213, 8480 Ichtegem</td>
+                            </tr>
+                            <tr>
+                                <th>Phone</th>
+                                <td>0495/22.94.27</td>
+                            </tr>
+                            <tr>
+                                <th>Birth place</th>
+                                <td>Sint-Niklaas</td>
+                            </tr>
+                            <tr>
+                                <th>Driver Licence</th>
+                                <td>B</td>
+                            </tr>
+                            <tr>
+                                <th>nationaliteit</th>
+                                <td>Belg</td>
+                            </tr>
+                        </table>
+                    </div>
+
+                    <div class="skills section">
+                        <h4>SKILLS</h4>
+                        <ul>
+                            <li>Teamplayer</li>
+                            <li>leergierig</li>
+                            <li>flexibel</li>
+                            <li>enthousiast</li>
+                        </ul>
+                    </div>
+
+                    <div class="language section">
+                        <h4 class="languagesTitle">LANGUAGES</h4>
+                        <div class="container">
+                            <h5>Dutch</h5>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                                    aria-valuemax="100" style="width:100%">
+                                    <span class="sr-only"> 100% Mother Language</span>
+                                </div>
+                            </div>
+                            <h5>English</h5>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                    aria-valuemax="100" style="width:80%">
+                                    <span class="sr-only"> 80% English Language</span>
+                                </div>
+                            </div>
+                            <h5>French</h5>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0"
+                                    aria-valuemax="100" style="width:10%">
+                                    <span class="sr-only"> 10% French Language</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-6">
+                    <div class="experience section">
+                        <h4>EXPERIENCE</h4>
+                        <table>
+                            <tr>
+                                <th>2018 - heden</th>
+                                <th>Veurne SnackFoods</th>
+                                <td>Proces Operator. Besturing van volautomatische machine, instaan voor het opstarten
+                                    en
+                                    stilleggen, reinigen en ombouwen van de machine en in staan voor de bijsturing van
+                                    procesparameters. </td>
+
+                            </tr>
+                            <tr>
+                                <th>2014 - 2015</th>
+                                <th>Call-It Oostende</th>
+                                <td>Callcenter medewerker. Technische dienst voor Orange diensten.</td>
+
+                            </tr>
+                            <tr>
+                                <th>2012 - 2014</th>
+                                <th>Marine Harvest Pieters (MOWI)</th>
+                                <td>Inpakken van de binnenkomende vis. Dit was voornamelijk bandwerk. Ik ben kunnen
+                                    doorgroeien naar
+                                    Proces Operator dit houd dat de machine ten allen tijde draait, bij problemen deze
+                                    zo snel
+                                    mogelijk verhelpen indien kan.</td>
+                            </tr>
+                            <tr>
+                                <th>2011 - 2012</th>
+                                <th>Bpost</th>
+                                <td>Sorteren en uitreiken van de post.</td>
+                            </tr>
+
+                        </table>
+                    </div>
+
+                    <div class="education section">
+                        <h4>EDUCATION</h4>
+                        <table>
+                            <tr>
+                                <th>2016 - 2017</th>
+                                <th>Tweedekansonderwijs</th>
+                                <td>opvoeder jeugd- en gehandicaptenzorg</td>
+
+                            </tr>
+                            <tr>
+                                <th>2009 - 2011</th>
+                                <th>Onze-Lieve-Vrouw-Hemelvaart Instituut</th>
+                                <td>Verzorging-voeding</td>
+                            </tr>
+                            <tr>
+                                <th>2005 - 2009</th>
+                                <th>Technisch Instituut Heilige Familie</th>
+                                <td>Haarzorg/Lichaamsverzorging</td>
+                            </tr>
+
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <!-- <div>
             <ul>
                 <li><a href=""></a> email</li>
                 <li>website</li>
                 <li>github</li>
                 <li>linkedIn</li>
             </ul>
-        </div>
+        </div> -->
 
-        <div class="informatie section">
-            <h4>INFORMATIE</h4>
-            <table class="info">
-                <tr>
-                    <th>adres</th>
-                    <td>Torhoutbaan 213, 8480 Ichtegem</td>
-                </tr>
-                <tr>
-                    <th>telefoon</th>
-                    <td>0495/22.94.27</td>
-                </tr>
-                <tr>
-                    <th>geboorteplaats</th>
-                    <td>Sint-Niklaas</td>
-                </tr>
-                <tr>
-                    <th>rijbewijs</th>
-                    <td>B</td>
-                </tr>
-                <tr>
-                    <th>nationaliteit</th>
-                    <td>Belg</td>
-                </tr>
-            </table>
-        </div>
 
-        <div class="werkErvaring section">
-            <h4>WERK ERVARING</h4>
-            <table>
-                <tr>
-                    <th>2018 - heden</th>
-                    <th>Veurne SnackFoods</th>
-                    <td>Proces Operator. Besturing van volautomatische machine, instaan voor het opstarten en
-                        stilleggen, reinigen en ombouwen van de machine en in staan voor de bijsturing van
-                        procesparameters. </td>
 
-                </tr>
-                <tr>
-                    <th>2014 - 2015</th>
-                    <th>Call-It Oostende</th>
-                    <td>Callcenter medewerker. Technische dienst voor Orange diensten.</td>
 
-                </tr>
-                <tr>
-                    <th>2012 - 2014</th>
-                    <th>Marine Harvest Pieters (MOWI)</th>
-                    <td>Inpakken van de binnenkomende vis. Dit was voornamelijk bandwerk. Ik ben kunnen doorgroeien naar
-                        Proces Operator dit houd dat de machine ten allen tijde draait, bij problemen deze zo snel
-                        mogelijk verhelpen indien kan.</td>
-                </tr>
-                <tr>
-                    <th>2011 - 2012</th>
-                    <th>Bpost</th>
-                    <td>Sorteren en uitreiken van de post.</td>
-                </tr>
 
-            </table>
-        </div>
 
-        <div class="talen section">
-            <h4 class="talenTitle">TALEN</h4>
-            <table class="talen">
-                <tr>
-                    <th>Nederlands</th>
-                    <td>moedertaal</td>
-                </tr>
-                <tr>
-                    <th>Engels</th>
-                    <td>goed</td>
-                </tr>
-                <tr>
-                    <th>Frans</th>
-                    <td>basis</td>
-                </tr>
-            </table>
-        </div>
-        <div class="opleiding section">
-            <h4>OPLEIDING</h4>
-            <table>
-                <tr>
-                    <th>2016 - 2017</th>
-                    <th>Tweedekansonderwijs</th>
-                    <td>opvoeder jeugd- en gehandicaptenzorg</td>
 
-                </tr>
-                <tr>
-                    <th>2009 - 2011</th>
-                    <th>Onze-Lieve-Vrouw-Hemelvaart Instituut</th>
-                    <td>Verzorging-voeding</td>
-                </tr>
-                <tr>
-                    <th>2005 - 2009</th>
-                    <th>Technisch Instituut Heilige Familie</th>
-                    <td>Haarzorg/Lichaamsverzorging</td>
-                </tr>
 
-            </table>
-        </div>
-        <div class="vaardigheden section">
-            <h4>VAARDIGHEDEN</h4>
-            <ul>
-                <li>Teamplayer</li>
-                <li>leergierig</li>
-                <li>flexibel</li>
-                <li>enthousiast</li>
-            </ul>
-        </div>
 
-        <div class="copyrightSection">
+
+
+
+        <div class="copyrightSection footer">
             <div class="col-md-12 text-center">
                 <p>&copy; Copyright by Moonen Nikita 2019</p>
             </div>
