Updated index.html about and updated styles css on cv.html

--- a/index.html
+++ b/index.html
@@ -96,13 +96,8 @@
                         <h4>My name is Moonen Nikita</h4>
                         <p>Hi there! I'm Moonen Nikita from Ichtegem, Belgium. I'm 26 years and currently work as a
                             process operator at
-                            Veurne SnackFoods. I would love to have a job as a Front End Web Developer. I don't have
-                            much
-                            experience, but i would like to get an opportunity to show you what i CAN do. </p>
-                        <p>I started learning programming on my own, i made a few localHost projects that i saw on the
-                            internet.
-                            This is my first live page on the internet. Now i feel confident enough to get a hands on
-                            web developer job.</p>
+                            Veurne SnackFoods.</p>
+                        <p>I have a passion for web design and love to create for web and mobile devices.</p>
                         <div class="cvLink">
                             <a href="cv.html" class="cv">curriculum vitae</a>
                         </div>
@@ -231,8 +226,9 @@
 
         <div id="contact" class="contactSection section">
             <div class="col-md-12 text-center">
-                <p class="subHeading">Like what you see?</p>
-                <h2>I'd love to hear from you!</h2>
+                <p class="subHeading">If you have a project that you want to get started, think you need my help with
+                    something... </p>
+
 
                 <div class="contactForm">
                     <button type="button" id="formButton">GET IN TOUCH!</button>
