--- a/cv.html
+++ b/cv.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/stylesCv.css">
+        <script src="https://kit.fontawesome.com/23e679334f.js"></script>
     </head>
 
     <body>
@@ -20,65 +21,82 @@
             <img class="imageCv" src="images/meCv.jpg" alt="image of nikita" align="left">
             <h1>MOONEN NIKITA</h1>
             <h3>curriculum vitae</h3>
+
         </div>
 
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-5">
                     <div class="info section">
-                        <h4>PERSONAL INFO</h4>
+                        <h4 class="sectionTitle">PERSONAL INFO</h4>
                         <table class="info">
                             <tr>
-                                <th>Adress</th>
+                                <th><i class="fas fa-map-marker-alt"></i> Adress</th>
+                            </tr>
+                            <tr>
                                 <td>Torhoutbaan 213, 8480 Ichtegem</td>
                             </tr>
                             <tr>
-                                <th>Phone</th>
+                                <th> <i class="fas fa-phone"></i> Phone</th>
+                            </tr>
+                            <tr>
                                 <td>0495/22.94.27</td>
                             </tr>
                             <tr>
-                                <th>Birth place</th>
+                                <th> <i class="fas fa-map-marker-alt"></i> Birth place</th>
+                            </tr>
+                            <tr>
                                 <td>Sint-Niklaas</td>
                             </tr>
                             <tr>
-                                <th>Driver Licence</th>
+                                <th><i class="fas fa-birthday-cake"></i> Birth date</th>
+                            </tr>
+                            <tr>
+                                <td>13-10-1992</td>
+                            </tr>
+                            <tr>
+                                <th><i class="fas fa-car"></i> Driver Licence</th>
+                            </tr>
+                            <tr>
                                 <td>B</td>
                             </tr>
                             <tr>
-                                <th>nationaliteit</th>
-                                <td>Belg</td>
+                                <th><i class="fas fa-flag"></i> nationality</th>
+                            </tr>
+                            <tr>
+                                <td>Belgian</td>
                             </tr>
                         </table>
                     </div>
 
                     <div class="skills section">
-                        <h4>SKILLS</h4>
+                        <h4 class="sectionTitle">SKILLS</h4>
                         <ul>
                             <li>Teamplayer</li>
-                            <li>leergierig</li>
-                            <li>flexibel</li>
-                            <li>enthousiast</li>
+                            <li>eager to learn more</li>
+                            <li>flexible</li>
+                            <li>enthusiastic</li>
                         </ul>
                     </div>
 
                     <div class="language section">
-                        <h4 class="languagesTitle">LANGUAGES</h4>
+                        <h4 class="languagesTitle sectionTitle">LANGUAGES</h4>
                         <div class="container">
-                            <h5>Dutch</h5>
+                            <h6>Dutch</h6>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                                     aria-valuemax="100" style="width:100%">
                                     <span class="sr-only"> 100% Mother Language</span>
                                 </div>
                             </div>
-                            <h5>English</h5>
+                            <h6>English</h6>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                     aria-valuemax="100" style="width:80%">
                                     <span class="sr-only"> 80% English Language</span>
                                 </div>
                             </div>
-                            <h5>French</h5>
+                            <h6>French</h6>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0"
                                     aria-valuemax="100" style="width:10%">
@@ -87,63 +105,83 @@
                             </div>
                         </div>
                     </div>
+                    <div class="hobbies section">
+                        <h4 class="sectionTitle">HOBBIES</h4>
+                        <ul>
+                            <li>Gamen</li>
+                            <li>Drawing</li>
+                            <li>Reading</li>
+                            <li>baking</li>
+                        </ul>
+                    </div>
 
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-7">
                     <div class="experience section">
-                        <h4>EXPERIENCE</h4>
+                        <h4 class="sectionTitle">EXPERIENCE</h4>
                         <table>
                             <tr>
-                                <th>2018 - heden</th>
-                                <th>Veurne SnackFoods</th>
-                                <td>Proces Operator. Besturing van volautomatische machine, instaan voor het opstarten
-                                    en
-                                    stilleggen, reinigen en ombouwen van de machine en in staan voor de bijsturing van
-                                    procesparameters. </td>
+                                <th>Year</th>
+                                <th>Where</th>
+                                <th>What</th>
+                            </tr>
+                            <tr>
+                                <td>2018 - present day</td>
+                                <td>Veurne SnackFoods</td>
+                                <td>Proces Operator. Control of fully automatic machine, responsible for starting up
+                                    and
+                                    shutting down, cleaning and converting the machine and ensuring the adjustment of
+                                    process parameters.</td>
 
                             </tr>
                             <tr>
-                                <th>2014 - 2015</th>
-                                <th>Call-It Oostende</th>
-                                <td>Callcenter medewerker. Technische dienst voor Orange diensten.</td>
+                                <td>2014 - 2015</td>
+                                <td>Call-It Oostende</td>
+                                <td>Call center employee. Technical service for Orange services.</td>
 
                             </tr>
                             <tr>
-                                <th>2012 - 2014</th>
-                                <th>Marine Harvest Pieters (MOWI)</th>
-                                <td>Inpakken van de binnenkomende vis. Dit was voornamelijk bandwerk. Ik ben kunnen
-                                    doorgroeien naar
-                                    Proces Operator dit houd dat de machine ten allen tijde draait, bij problemen deze
-                                    zo snel
-                                    mogelijk verhelpen indien kan.</td>
+                                <td>2012 - 2014</td>
+                                <td>Marine Harvest Pieters (MOWI)</td>
+                                <td>Packing of frozen fish. This was mainly band work. I was able to
+                                    grow as
+                                    Process Operator. This means that the machine runs at all times. Solving problems as
+                                    quickly as possible.</td>
                             </tr>
                             <tr>
-                                <th>2011 - 2012</th>
-                                <th>Bpost</th>
-                                <td>Sorteren en uitreiken van de post.</td>
+                                <td>2011 - 2012</td>
+                                <td>Bpost</td>
+                                <td>Sorting and delivering the mail.</td>
                             </tr>
 
                         </table>
                     </div>
 
                     <div class="education section">
-                        <h4>EDUCATION</h4>
+                        <h4 class="sectionTitle">EDUCATION</h4>
                         <table>
                             <tr>
-                                <th>2016 - 2017</th>
-                                <th>Tweedekansonderwijs</th>
-                                <td>opvoeder jeugd- en gehandicaptenzorg</td>
-
+                                <th>Year</th>
+                                <th>School</th>
+                                <th>Field of study</th>
+                                <th>Diploma</th>
                             </tr>
                             <tr>
-                                <th>2009 - 2011</th>
-                                <th>Onze-Lieve-Vrouw-Hemelvaart Instituut</th>
-                                <td>Verzorging-voeding</td>
+                                <td>2016 - 2017</td>
+                                <td>Tweedekansonderwijs</td>
+                                <td>youth and disabled care</td>
                             </tr>
                             <tr>
-                                <th>2005 - 2009</th>
-                                <th>Technisch Instituut Heilige Familie</th>
-                                <td>Haarzorg/Lichaamsverzorging</td>
+                                <td>2009 - 2011</td>
+                                <td>Onze-Lieve-Vrouw-Hemelvaart Instituut</td>
+                                <td>personal care / kitchen</td>
+                                <td>Second grade</td>
+                            </tr>
+                            <tr>
+                                <td>2005 - 2009</td>
+                                <td>Technisch Instituut Heilige Familie</td>
+                                <td>Haircare / Bodycare</td>
+                                <td>Second grade</td>
                             </tr>
 
                         </table>
@@ -153,31 +191,20 @@
             </div>
         </div>
 
-
-
-
-        <!-- <div>
-            <ul>
-                <li><a href=""></a> email</li>
-                <li>website</li>
-                <li>github</li>
-                <li>linkedIn</li>
-            </ul>
-        </div> -->
-
-
-
-
-
-
-
-
-
-
-
-
         <div class="copyrightSection footer">
-            <div class="col-md-12 text-center">
+            <div class="col-sm-12">
+                <div>
+                    <ul id="socialMenu">
+                        <li><a href="mailto:nikita-moonen@outlook.com"><i class="fas fa-at"></i></a></li>
+                        <li> <a href="https://nikkiita.github.io/portfolio/" target="_blank"><i
+                                    class="fas fa-globe"></i></a></li>
+                        <li> <a href="https://github.com/nikkiita" target="_blank"> <i class="fab fa-github"></i></a>
+                        </li>
+                        <li> <a href="https://www.linkedin.com/in/nikita-moonen-875486191/" target="_blank"><i
+                                    class="fab fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
                 <p>&copy; Copyright by Moonen Nikita 2019</p>
             </div>
         </div>
