--- a/cv.html
+++ b/cv.html
@@ -5,207 +5,133 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Moonen Nikita</title>
 
-        <link href="https://fonts.googleapis.com/css?family=Bitter|Playfair+Display:400,900,900i&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles/stylesCv.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Sanchez&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/23e679334f.js"></script>
+        <link rel="stylesheet" href="./styles/stylesCv.css">
+
+        <title>Resume</title>
+        <style>
+
+        </style>
     </head>
 
     <body>
 
-        <div class="heading">
-            <img class="imageCv" src="images/meCv.jpg" alt="image of nikita" align="left">
-            <h1>MOONEN NIKITA</h1>
-            <h3>curriculum vitae</h3>
-
-        </div>
-
         <div class="container">
-            <div class="row">
-                <div class="col-sm-5">
-                    <div class="info section">
-                        <h4 class="sectionTitle">PERSONAL INFO</h4>
-                        <table class="info">
-                            <tr>
-                                <th><i class="fas fa-map-marker-alt"></i> Adress</th>
-                            </tr>
-                            <tr>
-                                <td>Torhoutbaan 213, 8480 Ichtegem</td>
-                            </tr>
-                            <tr>
-                                <th> <i class="fas fa-phone"></i> Phone</th>
-                            </tr>
-                            <tr>
-                                <td>0495/22.94.27</td>
-                            </tr>
-                            <tr>
-                                <th> <i class="fas fa-map-marker-alt"></i> Birth place</th>
-                            </tr>
-                            <tr>
-                                <td>Sint-Niklaas</td>
-                            </tr>
-                            <tr>
-                                <th><i class="fas fa-birthday-cake"></i> Birth date</th>
-                            </tr>
-                            <tr>
-                                <td>13-10-1992</td>
-                            </tr>
-                            <tr>
-                                <th><i class="fas fa-car"></i> Driver Licence</th>
-                            </tr>
-                            <tr>
-                                <td>B</td>
-                            </tr>
-                            <tr>
-                                <th><i class="fas fa-flag"></i> nationality</th>
-                            </tr>
-                            <tr>
-                                <td>Belgian</td>
-                            </tr>
-                        </table>
-                    </div>
+            <div class="header">
+                <div class="logo"></div>
+                <div class="title-holder"></div>
+                <div class="name">Moonen Nikita</div>
+                <div class="designare">Front End Developer</div>
+            </div> <!-- end header -->
 
-                    <div class="skills section">
-                        <h4 class="sectionTitle">SKILLS</h4>
-                        <ul>
-                            <li>Teamplayer</li>
-                            <li>eager to learn more</li>
-                            <li>flexible</li>
-                            <li>enthusiastic</li>
-                        </ul>
-                    </div>
-
-                    <div class="language section">
-                        <h4 class="languagesTitle sectionTitle">LANGUAGES</h4>
-                        <div class="container">
-                            <h6>Dutch</h6>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-                                    aria-valuemax="100" style="width:100%">
-                                    <span class="sr-only"> 100% Mother Language</span>
-                                </div>
-                            </div>
-                            <h6>English</h6>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                    aria-valuemax="100" style="width:80%">
-                                    <span class="sr-only"> 80% English Language</span>
-                                </div>
-                            </div>
-                            <h6>French</h6>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0"
-                                    aria-valuemax="100" style="width:10%">
-                                    <span class="sr-only"> 10% French Language</span>
-                                </div>
-                            </div>
+            <div class="content-body">
+                <div class="section-left">
+                    <div class="wrapper">
+                        <div class="lists">
+                            <h2>professional skills</h2>
+                            <ul>
+                                <li>Layout design</li>
+                                <li>CSS3</li>
+                                <li>JavaScrip</li>
+                                <li>HTML</li>
+                            </ul>
                         </div>
-                    </div>
-                    <div class="hobbies section">
-                        <h4 class="sectionTitle">HOBBIES</h4>
-                        <ul>
-                            <li>Gamen</li>
-                            <li>Drawing</li>
-                            <li>Reading</li>
-                            <li>baking</li>
-                        </ul>
-                    </div>
+                        <div class="lists">
+                            <h2>personal skills</h2>
+                            <ul>
+                                <li>Team player</li>
+                                <li>Eager to learn more</li>
+                                <li>Creative spirit</li>
+                                <li>Motivated</li>
+                            </ul>
+                        </div>
+                        <div class="lists">
+                            <h2>contact</h2>
+                            <p><i class="fas fa-phone-alt"></i>: +32 495 229 427</p>
+                            <p><i class="fas fa-at"></i>: nikita-moonen@outlook.com</p>
+                            <p><i class="fas fa-globe"></i>: <a target="_blank"
+                                    href="https://nikkiita.github.io/portfolio/">
+                                    www.nikitamoonen.be</a></p>
+                        </div>
+                        <div class="lists">
+                            <h2>social</h2>
+                            <p>
 
+                                <span><a target="_blank" href="https://github.com/nikkiita"><i
+                                            class="fab fa-github-alt"></i></a></span>
+                                <!-- github -->
+                            </p>
+                            <p>
+
+                                <span><a target="_blank" href="https://www.linkedin.com/in/nikita-moonen-875486191/"><i
+                                            class="fab fa-linkedin-in"></i></a></span>
+                                <!-- linkedin -->
+                            </p>
+                        </div>
+
+                    </div> <!-- end wrapper -->
+                </div><!-- end section-left -->
+                <div class="section-right">
+                    <div class="wrapper">
+                        <div class="content">
+                            <h2>about</h2>
+                            <p>I am a front end developer seeking a full-time position in the field of front-end
+                                developer where i can apply my knowledge and skills for continuous improvement.</p>
+                        </div>
+                        <div class="content">
+                            <h2>work experience</h2>
+                            <h3>Proces Operator</h3>
+                            <h4>Veurne SnackFoods | Jan 2018 - Present day</h4>
+                            <ul>
+                                <li>Control of fully automatic machine</li>
+                                <li>responsible for starting up and shutting down, cleaning and converting the machine
+                                </li>
+                                <li>ensuring the adjustment of process parameters</li>
+                            </ul>
+
+                            <h3>Call center employee</h3>
+                            <h4>Call-it | Sept 2014 - Jul 2015</h4>
+                            <ul>
+                                <li></li>
+                            </ul>
+
+                            <h3>Packer</h3>
+                            <h4>Marine Harvest Pieters (MOWI) | Apr 2012 - Jun 2014</h4>
+                            <ul>
+                                <li>Packing of frozen fish</li>
+                            </ul>
+
+                            <h3>mail delivery</h3>
+                            <h4>Bpost | Nov 2011 - Mar 2012</h4>
+                            <ul>
+                                <li>Sorting the incoming mail</li>
+                                <li>Delivering the sorted mail</li>
+                            </ul>
+                        </div>
+
+                        <div class="content">
+                            <h2>education</h2>
+                            <h3>youth and disabled care</h3>
+                            <h4>Tweedekansonderwijs | 2016 - 2017</h4>
+                            <h3>personal care / kitchen</h3>
+                            <h4>Onze-Lieve-Vrouw-Hemelvaart Instituut | 2009 - 2011</h4>
+                            <h5>Certificate seconde grade</h5>
+                            <h3>Haircare / Bodycare</h3>
+                            <h4>Technisch Instituut Heilige Familie | 2005 - 2009</h4>
+                            <h5>Certificate seconde grade</h5>
+                        </div>
+                    </div> <!-- end wrapper -->
+                </div> <!-- end section-right -->
+            </div> <!-- end content-body -->
+
+            <div class="footer">
+                <div class="copyrightSection">
+                    <div class="col-md-12 text-center">
+                        <p>&copy; Copyright by Moonen Nikita 2019</p>
+                    </div>
                 </div>
-                <div class="col-sm-7">
-                    <div class="experience section">
-                        <h4 class="sectionTitle">EXPERIENCE</h4>
-                        <table>
-                            <tr>
-                                <th>Year</th>
-                                <th>Where</th>
-                                <th>What</th>
-                            </tr>
-                            <tr>
-                                <td>2018 - present day</td>
-                                <td>Veurne SnackFoods</td>
-                                <td>Proces Operator. Control of fully automatic machine, responsible for starting up
-                                    and
-                                    shutting down, cleaning and converting the machine and ensuring the adjustment of
-                                    process parameters.</td>
-
-                            </tr>
-                            <tr>
-                                <td>2014 - 2015</td>
-                                <td>Call-It Oostende</td>
-                                <td>Call center employee. Technical service for Orange services.</td>
-
-                            </tr>
-                            <tr>
-                                <td>2012 - 2014</td>
-                                <td>Marine Harvest Pieters (MOWI)</td>
-                                <td>Packing of frozen fish. This was mainly band work. I was able to
-                                    grow as
-                                    Process Operator. This means that the machine runs at all times. Solving problems as
-                                    quickly as possible.</td>
-                            </tr>
-                            <tr>
-                                <td>2011 - 2012</td>
-                                <td>Bpost</td>
-                                <td>Sorting and delivering the mail.</td>
-                            </tr>
-
-                        </table>
-                    </div>
-
-                    <div class="education section">
-                        <h4 class="sectionTitle">EDUCATION</h4>
-                        <table>
-                            <tr>
-                                <th>Year</th>
-                                <th>School</th>
-                                <th>Field of study</th>
-                                <th>Diploma</th>
-                            </tr>
-                            <tr>
-                                <td>2016 - 2017</td>
-                                <td>Tweedekansonderwijs</td>
-                                <td>youth and disabled care</td>
-                            </tr>
-                            <tr>
-                                <td>2009 - 2011</td>
-                                <td>Onze-Lieve-Vrouw-Hemelvaart Instituut</td>
-                                <td>personal care / kitchen</td>
-                                <td>Second grade</td>
-                            </tr>
-                            <tr>
-                                <td>2005 - 2009</td>
-                                <td>Technisch Instituut Heilige Familie</td>
-                                <td>Haircare / Bodycare</td>
-                                <td>Second grade</td>
-                            </tr>
-
-                        </table>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="copyrightSection footer">
-            <div class="col-sm-12">
-                <div>
-                    <ul id="socialMenu">
-                        <li><a href="mailto:nikita-moonen@outlook.com"><i class="fas fa-at"></i></a></li>
-                        <li> <a href="https://nikkiita.github.io/portfolio/" target="_blank"><i
-                                    class="fas fa-globe"></i></a></li>
-                        <li> <a href="https://github.com/nikkiita" target="_blank"> <i class="fab fa-github"></i></a>
-                        </li>
-                        <li> <a href="https://www.linkedin.com/in/nikita-moonen-875486191/" target="_blank"><i
-                                    class="fab fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <p>&copy; Copyright by Moonen Nikita 2019</p>
             </div>
         </div>
 
