update cv.html and styleCv.css

--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
                             <ul>
                                 <li>Layout design</li>
                                 <li>CSS3</li>
-                                <li>JavaScrip</li>
+                                <li>JavaScript</li>
                                 <li>HTML</li>
                             </ul>
                         </div>
@@ -59,14 +59,15 @@
                             <h2>social</h2>
                             <p>
 
-                                <span><a target="_blank" href="https://github.com/nikkiita"><i
-                                            class="fab fa-github-alt"></i></a></span>
+                                <span><a target="_blank" href="https://github.com/nikkiita">Git<i
+                                            class="fab fa-github-alt social-icon"></i></a></span>
                                 <!-- github -->
                             </p>
                             <p>
 
-                                <span><a target="_blank" href="https://www.linkedin.com/in/nikita-moonen-875486191/"><i
-                                            class="fab fa-linkedin-in"></i></a></span>
+                                <span><a target="_blank"
+                                        href="https://www.linkedin.com/in/nikita-moonen-875486191/">Linked<i
+                                            class="fab fa-linkedin-in social-icon"></i></a></span>
                                 <!-- linkedin -->
                             </p>
                         </div>
@@ -77,7 +78,7 @@
                     <div class="wrapper">
                         <div class="content">
                             <h2>about</h2>
-                            <p>I am a front end developer seeking a full-time position in the field of front-end
+                            <p>I am a front - end developer seeking a full-time position in the field of front-end
                                 developer where i can apply my knowledge and skills for continuous improvement.</p>
                         </div>
                         <div class="content">
@@ -94,7 +95,9 @@
                             <h3>Call center employee</h3>
                             <h4>Call-it | Sept 2014 - Jul 2015</h4>
                             <ul>
-                                <li></li>
+                                <li>knowledge of different CMR</li>
+                                <li>Working with billing program</li>
+                                <li>Helping cutomers with technical issues on mobile device</li>
                             </ul>
 
                             <h3>Packer</h3>
@@ -113,6 +116,12 @@
 
                         <div class="content">
                             <h2>education</h2>
+                            <h3>flutter development</h3>
+                            <h4>Udemy | Apr 2019 - Jun 2019</h4>
+                            <h5>Certificate Flutter Darts</h5>
+                            <h3>full stack web developer</h3>
+                            <h4>Udemy | Apr 2019 - Aug 2019</h4>
+                            <h5>Certificate Full-Stack Web Developer</h5>
                             <h3>youth and disabled care</h3>
                             <h4>Tweedekansonderwijs | 2016 - 2017</h4>
                             <h3>personal care / kitchen</h3>
