--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,7 @@
             <div class="header">
                 <div class="logo"></div>
                 <div class="title-holder"></div>
-                <div class="name">Moonen Nikita</div>
+                <div class="name">Nikita Moonen</div>
                 <div class="designare">Front End Developer</div>
             </div> <!-- end header -->
 
@@ -117,11 +117,13 @@
                         <div class="content">
                             <h2>education</h2>
                             <h3>flutter development</h3>
-                            <h4>Udemy | Apr 2019 - Jun 2019</h4>
-                            <h5>Certificate Flutter Darts</h5>
-                            <h3>full stack web developer</h3>
-                            <h4>Udemy | Apr 2019 - Aug 2019</h4>
-                            <h5>Certificate Full-Stack Web Developer</h5>
+                            <h4>Udemy | 2019</h4>
+                            <h5><a href="https://www.udemy.com/certificate/UC-GACZQOSI/">Certificate Flutter Dart</a>
+                            </h5>
+                            <h3>front end web developer</h3>
+                            <h4>Udemy | 2019</h4>
+                            <h5><a href="https://www.udemy.com/certificate/UC-YHSFI3R9/">Certificate Front-End Web
+                                    Developer</a></h5>
                             <h3>youth and disabled care</h3>
                             <h4>Tweedekansonderwijs | 2016 - 2017</h4>
                             <h3>personal care / kitchen</h3>
