--- a/projects.html
+++ b/projects.html
@@ -26,23 +26,12 @@
     <body>
         <div class="header">
             <h2>my projects</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat voluptatibus harum ullam ipsum molestias
-                dicta saepe, minima sint atque facere assumenda nam modi quaerat at fugit odit dignissimos autem quo!
-                Lorem
-                ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis placeat ad sit sint, commodi accusamus
-                impedit numquam vero corporis repellat libero officia dolores facilis totam suscipit quibusdam quis
-                incidunt. Culpa. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio architecto culpa
-                atque
-                sed non error eaque voluptatibus voluptas quaerat facilis? Voluptatem accusamus at dolores ipsum labore
-                voluptatibus est facilis. Facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Necessitatibus
-                nam a autem odit accusamus? Totam ad harum odit assumenda eius veniam ut earum? Harum placeat eos odio
-                ex
-                incidunt quam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias sunt modi dolore
-                molestiae dolores? Nam quo aliquam et dolores suscipit, fugiat sunt, architecto odit nemo beatae quidem
-                quis
-                illo explicabo!</p>
+            <p>On this page you can scroll through all the projects that i made so far. If you want to see the project
+                more in details or you just want to test it out, then press the <button>SEE MORE...</button> button
+                to go straight to the page. If you're intressed in how it works behind the screens, then press the
+                <button>CODE</button> and it will take you to your destination.</p>
         </div>
+
 
 
         <nav id="navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -62,9 +51,6 @@
                         <a class="nav-link" href="#apps">Apps</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#webApps">Web Apps</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link " href="#website">Websites</a>
                     </li>
                 </ul>
@@ -74,26 +60,12 @@
 
 
         <div class="container content">
-            <div class="row">
-                <h3 id="apps">apps</h3>
+            <div class="row line">
+                <h3 id="apps" class="sectionTitle">apps</h3>
             </div>
             <div class="block">
                 <div class="row">
-                    <div class="span4">
-                        <img class="img-flutterCard apps-left" src="images/portfolio/flutterContactCard.jpg"
-                            alt="a contact flutter card">
-                        <div class="content-heading">
-                            <h5>contact flutter card</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium exercitationem a
-                            quod harum nostrum eaque voluptatem nam quos, eveniet nesciunt voluptatibus, velit quas
-                            provident est odit temporibus vitae vero. Commodi!</p>
-                    </div>
-                </div>
-
-                <br>
-
-                <div class="row">
+                    <br class="line">
                     <div class="span4">
                         <img class="img-bmiResultPage apps-right" src="images/portfolio/bmi-calculator-resultPage.jpg"
                             alt="bmi-calculator-resultPage">
@@ -102,9 +74,12 @@
                         <div class="content-heading">
                             <h5>BMI calculator</h5>
                         </div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit necessitatibus ullam
-                            inventore fugiat corporis suscipit accusamus autem a eaque quo dolore alias,
-                            voluptatibus veniam id placeat atque laboriosam dicta dolores.</p>
+                        <p>calculate your BMI or your body mass index with this beautiful app. You get a full result of
+                            the calculation on the second page if you press calculate.</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button>
                     </div>
                 </div>
 
@@ -121,9 +96,13 @@
                         <div class="content-heading">
                             <h5>clima app</h5>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium exercitationem a
-                            quod harum nostrum eaque voluptatem nam quos, eveniet nesciunt voluptatibus, velit quas
-                            provident est odit temporibus vitae vero. Commodi!</p>
+                        <p>In this app you can get the weather of your current location. But not only that you can also
+                            get the wheather of any location of your choice if you press the city icon you can search
+                            any location you want.</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button>
                     </div>
                 </div>
 
@@ -138,9 +117,14 @@
                         <div class="content-heading">
                             <h5>magic 8 ball</h5>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium exercitationem a
-                            quod harum nostrum eaque voluptatem nam quos, eveniet nesciunt voluptatibus, velit quas
-                            provident est odit temporibus vitae vero. Commodi!</p>
+                        <p>A decision making app. It's a magic 8 ball app which you can ask to answer all of your
+                            difficult life questions such as Should
+                            I eat candy or should I eat healthy snack. This app has a whole bunch of random images.
+                            And every time you tap on the Magic 8 Ball it'll give you a new answer.</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button>
                     </div>
                 </div>
 
@@ -155,9 +139,13 @@
                         <div class="content-heading">
                             <h5>bitcoin ticker</h5>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium exercitationem a
-                            quod harum nostrum eaque voluptatem nam quos, eveniet nesciunt voluptatibus, velit quas
-                            provident est odit temporibus vitae vero. Commodi!</p>
+                        <p>It's an app that is going to tell us the current price in various currencies such as euros or
+                            pounds or dollars for various crypto currencies such as Bitcoin or theorem and light coins.
+                        </p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button>
                     </div>
                 </div>
 
@@ -172,9 +160,13 @@
                         <div class="content-heading">
                             <h5>dicee app</h5>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium exercitationem a
-                            quod harum nostrum eaque voluptatem nam quos, eveniet nesciunt voluptatibus, velit quas
-                            provident est odit temporibus vitae vero. Commodi!</p>
+                        <p>A dice rolling app. When you click on it it's going to change the dice face. So you'll be
+                            able to use this to settle any scores
+                            you have in real life. Such as who has to take out the trash.</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button>
                     </div>
                 </div>
 
@@ -189,9 +181,13 @@
                         <div class="content-heading">
                             <h5>quizler app</h5>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium exercitationem a
-                            quod harum nostrum eaque voluptatem nam quos, eveniet nesciunt voluptatibus, velit quas
-                            provident est odit temporibus vitae vero. Commodi!</p>
+                        <p> A quiz app where the user has to answer questions and we'll tell them how many they got
+                            right. As you will go on in the quiz you can follow your score on the bottom of the screen.
+                        </p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button>
                     </div>
                 </div>
 
@@ -205,6 +201,10 @@
                         </div>
                         <p>This is a basic xylophone for mobile devices. When you touch a color on your phone there
                             plays a sound. Each color has it own unique sound.</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button>SEE MORE...</button>
+                        <button>CODE</button>
                     </div>
                 </div>
             </div>
@@ -212,68 +212,71 @@
         </div>
 
         <div class="container">
-            <div class="row">
-                <h3 id="webApps">web apps</h3>
+            <div class="row line">
+                <h3 id="website" class="sectionTitle">websites</h3>
             </div>
             <div class="block">
+                <br>
                 <div class="row">
+                    <br>
                     <div class="span4">
-                        <img class="img-left" src="images/portfolio/passGen.png" alt="password generator">
+                        <img class="img-passGen" src="images/portfolio/passGen.png" alt="password generator">
                         <div class="content-heading">
                             <h5>password generator</h5>
                         </div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit necessitatibus ullam
-                            inventore fugiat corporis suscipit accusamus autem a eaque quo dolore alias,
-                            voluptatibus veniam id placeat atque laboriosam dicta dolores.</p>
+                        <p>This is a simple password generator. You can change the lenght of the password you want to
+                            get. It then loops true the function to get the length you asked for.</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button><a class="details" target="_blank"
+                                href="https://nikkiita.github.io/password-generator/">SEE
+                                MORE...</a></button>
+                        <button><a class="details" target="_blank"
+                                href="https://github.com/nikkiita/password-generator">CODE</a></button>
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="span4">
-                        <img class="img-right" src="images/portfolio/drumKit.png" alt="drum kit">
+                        <img class="img-tacky" src="images/portfolio/tackyTrucks.png" alt="tacky truck website page">
                         <div class="content-heading">
-                            <h5>drum kit</h5>
+                            <h5>non-responsive tacky truck page</h5>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium exercitationem a
-                            quod harum nostrum eaque voluptatem nam quos, eveniet nesciunt voluptatibus, velit quas
-                            provident est odit temporibus vitae vero. Commodi!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <h3 id="website">websites</h3>
-            </div>
-            <div class="block">
-                <div class="row">
-                    <div class="span4">
-                        <img class="img-left" src="images/portfolio/passGen.png" alt="password generator">
-                        <div class="content-heading">
-                            <h5>password generator</h5>
-                        </div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit necessitatibus ullam
-                            inventore fugiat corporis suscipit accusamus autem a eaque quo dolore alias,
-                            voluptatibus veniam id placeat atque laboriosam dicta dolores.</p>
+                        <p>I made this non-responsive page to get an idea how the non-responsive website used to look
+                            like, to see the difference with a responsive website.</p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button><a class="details" target="_blank" href="https://nikkiita.github.io/tacky-Trucks/">SEE
+                                MORE...</a></button>
+                        <button><a class="details" target="_blank"
+                                href="https://github.com/nikkiita/tacky-Trucks">CODE</a></button>
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="span4">
-                        <img class="img-right" src="images/portfolio/drumKit.png" alt="drum kit">
+                        <img class="img-drumKit" src="images/portfolio/drumKit.png" alt="drum kit">
                         <div class="content-heading">
                             <h5>drum kit</h5>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium exercitationem a
-                            quod harum nostrum eaque voluptatem nam quos, eveniet nesciunt voluptatibus, velit quas
-                            provident est odit temporibus vitae vero. Commodi!</p>
+                        <p>This is a website with sound animation. Each drum is linkt to a special key on your keyboard.
+                            When you push the button on your keyboard, you hear the sound of that specific drum. You
+                            can also click on the image to play the sounds of that drum. </p>
+                        <p>If you want to test me out or you just want to take a closer look at the code behind it all.
+                        </p>
+                        <button><a class="details" target="_blank" href="https://nikkiita.github.io/drumKit/">SEE
+                                MORE...</a></button>
+                        <button><a class="details" target="_blank"
+                                href="https://github.com/nikkiita/drumKit">CODE</a></button>
                     </div>
                 </div>
             </div>
         </div>
-
-        <script src="js/projects.js"></script>
+        <div class="copyrightSection">
+            <div class="col-md-12 text-center">
+                <p>&copy; Copyright by Moonen Nikita 2019</p>
+            </div>
+            <script src="js/projects.js"></script>
     </body>
 
 </html>
